--- a/story.html
+++ b/story.html
@@ -100,7 +100,13 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<!-- UUID://6544D2B5-D5B5-477E-8C4A-B55028B7A3E8// --><tw-storydata name="Athena" startnode="2" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="6544D2B5-D5B5-477E-8C4A-B55028B7A3E8" zoom="1" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.menu-container {
+	<!-- UUID://6544D2B5-D5B5-477E-8C4A-B55028B7A3E8// --><tw-storydata name="Athena" startnode="3" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="6544D2B5-D5B5-477E-8C4A-B55028B7A3E8" zoom="1" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+/* Main Menu or any header that should be centered*/
+.menu-container {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -108,23 +114,98 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 	text-align: center;
 }
 
-.menu-container h2 {
-	font-size: 2em;
+/* Standard Buttons */
+.macro-button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 12px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 }
 
-.menu-container button {
-	font-size: 1.2em;
-	padding: 0.4em 1.2em;
-	margin: 2px 0; /* Tighter vertical spacing */
-	background-color: #3498db;
-	color: white;
-	border: none;
-	border-radius: 6px;
-	cursor: pointer;
+/* Standard Buttons Hover */
+.macro-button:hover {
+    background-color: #45a049;
+    transform: translateY(-1px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
-.menu-container button:hover {
-	background-color: #2980b9;
+/* Standard Buttons Active */
+.macro-button:active {
+    transform: translateY(1px);
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+
+/* Background for nick-name selection */
+.nickname-section {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.rooms-grid {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 20px;
+  justify-content: center;
+}
+
+.room-card {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 8px;
+    padding: 100px;
+    transition: transform 0.2s;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-sizing: border-box;
+}
+
+.room-card:hover {
+    transform: translateY(-5px);
+    border-color: #4CAF50;
+}
+
+.room-name {
+    font-weight: bold;
+    color: #4CAF50;
+}
+
+.join-button {
+    background: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    font-size: 16px;
+    transition: background 0.2s;
+}
+
+.join-button:hover {
+    background: #45a049;
+}
+
+.join-button:disabled {
+    background: #666;
+    cursor: not-allowed;
+}
+
+.no-rooms {
+    text-align: center;
+    color: #666;
+    padding: 40px;
+    font-size: 18px;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">const firebaseConfig = {
     apiKey: "AIzaSyDzgDI28nu9RGm32mJH-1tvkZCQOdEjdrk",
     authDomain: "athena-astrazo.firebaseapp.com",
@@ -264,13 +345,68 @@ Enter your nickname:
             alert(&quot;Please enter a room name and a nickname!&quot;);
         }
     &lt;&lt;/script&gt;&gt;
-&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Start" tags="" position="225,100" size="100,100">&lt;div class=&quot;menu-container&quot;&gt;
-	&lt;h2&gt;Main Menu&lt;/h2&gt;
+&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="JoinRoom" tags="" position="225,100" size="100,100">&lt;div class=&quot;menu-container&quot;&gt;
+    &lt;h1&gt;Join Room&lt;/h1&gt;
+&lt;/div&gt;
+&lt;div class=&quot;nickname-section&quot;&gt;
+    &lt;h2&gt;Enter Your Nickname&lt;/h2&gt;
+    &lt;&lt;textbox &quot;$connectedUsername&quot; &quot;&quot; placeholder=&quot;Enter your nickname&quot;&gt;&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;rooms-grid&quot;&gt;
+    &lt;&lt;if $availableRooms.length is 0&gt;&gt;
+        &lt;div class=&quot;no-rooms&quot;&gt;No rooms available. Create a new room to start playing!&lt;/div&gt;
+    &lt;&lt;else&gt;&gt;
+        &lt;&lt;for _room range $availableRooms&gt;&gt;
+            &lt;&lt;capture _room&gt;&gt;
+                &lt;div class=&quot;room-card&quot;&gt;
+                    &lt;div class=&quot;room-name&quot;&gt;
+                        &lt;h3&gt;&lt;&lt;= _room.roomName&gt;&gt;&lt;/h3&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;room-info&quot;&gt;
+                        Players: &lt;&lt;= _room.roomPlayers ? _room.roomPlayers.length : 0&gt;&gt;/4
+                    &lt;/div&gt;
+                    &lt;&lt;button &quot;Join Room&quot; class=&quot;join-button&quot;&gt;&gt;
+                        &lt;&lt;if $connectedUsername.trim()&gt;&gt;
+                            &lt;&lt;set $connectedRoomId   = _room.roomId&gt;&gt;
+                            &lt;&lt;set $connectedRoomName = _room.roomName&gt;&gt;
+
+                            &lt;&lt;script&gt;&gt;
+                            const roomId   = State.variables.connectedRoomId;
+                            const roomName = State.variables.connectedRoomName;
+                            const userName = State.variables.connectedUsername.trim();
+
+                            createUser(userName, roomName, roomId)
+                                .then(userId =&gt; {
+                                    State.variables.connectedUserId = userId;
+                                    return addUserToRoom(userId, userName, roomId);
+                                })
+                                .then(() =&gt; {
+                                    Engine.play(&quot;LoadRoomLobby&quot;);
+                                })
+                                .catch(err =&gt; {
+                                    console.error(&quot;Join failed:&quot;, err);
+                                    UI.alert(&quot;Couldn&#39;t join the room. Please try again.&quot;);
+                                });
+                            &lt;&lt;/script&gt;&gt;
+                        &lt;&lt;else&gt;&gt;
+                            &lt;&lt;script&gt;&gt;
+                            UI.alert(&quot;Please enter a room nickname before joining a room!&quot;);
+                            &lt;&lt;/script&gt;&gt;
+                        &lt;&lt;/if&gt;&gt;
+                    &lt;&lt;/button&gt;&gt;
+                &lt;/div&gt;
+            &lt;&lt;/capture&gt;&gt;
+        &lt;&lt;/for&gt;&gt;
+    &lt;&lt;/if&gt;&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="Start" tags="" position="350,100" size="100,100">&lt;div class=&quot;menu-container&quot;&gt;
+    &lt;h1&gt;Athena&lt;/h1&gt;
 	&lt;&lt;button &quot;Create Room&quot;&gt;&gt;&lt;&lt;goto &quot;CreateRoom&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 	&lt;&lt;button &quot;Join Room&quot;&gt;&gt;&lt;&lt;goto &quot;LoadRooms&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="RoomLobby" tags="" position="350,100" size="100,100">&lt;&lt;= $connectedRoomName&gt;&gt;
-Joined players:
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="4" name="RoomLobby" tags="" position="475,100" size="100,100">&lt;&lt;= $connectedRoomName&gt;&gt;
+Players:
 &lt;div id=&quot;playerList&quot;&gt;&lt;/div&gt;
+&lt;div id=&quot;playerCount&quot; style=&quot;position: fixed; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px 10px; border-radius: 5px; font-size: 14px;&quot;&gt;Players: 0/4&lt;/div&gt;
 
 &lt;&lt;nobr&gt;&gt;
 &lt;&lt;repeat 1s&gt;&gt;
@@ -282,6 +418,9 @@ Joined players:
 
 			const markup = &#39;&lt;ul&gt;&#39; + names.map(n =&gt; `&lt;li&gt;${n}&lt;/li&gt;`).join(&#39;&#39;) + &#39;&lt;/ul&gt;&#39;;
 			$(&#39;#playerList&#39;).empty().wiki(markup);
+
+            /* Update player count */
+            $(&#39;#playerCount&#39;).text(`Players: ${names.length}/4`);
 		})
 	&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
@@ -295,42 +434,7 @@ Joined players:
             State.variables.connectedRoomId);
         Engine.play(&quot;SelectRoom&quot;)
     &lt;&lt;/script&gt;&gt;
-&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="4" name="SelectRoom" tags="" position="475,100" size="100,100">Enter your nickname:
-&lt;&lt;textbox &quot;$connectedUsername&quot; &quot;&quot;&gt;&gt;
-
-&lt;&lt;for _room range $availableRooms&gt;&gt;
-	&lt;&lt;capture _room&gt;&gt;
-		&lt;&lt;button _room.roomName&gt;&gt;
-			&lt;&lt;if $connectedUsername.trim()&gt;&gt;
-				&lt;&lt;set $connectedRoomId   = _room.roomId&gt;&gt;
-				&lt;&lt;set $connectedRoomName = _room.roomName&gt;&gt;
-
-				&lt;&lt;script&gt;&gt;
-				const roomId   = State.variables.connectedRoomId;
-				const roomName = State.variables.connectedRoomName;
-				const userName = State.variables.connectedUsername.trim();
-
-				createUser(userName, roomName, roomId)
-					.then(userId =&gt; {
-						State.variables.connectedUserId = userId;
-						return addUserToRoom(userId, userName, roomId);
-					})
-					.then(() =&gt; {
-						Engine.play(&quot;LoadRoomLobby&quot;);
-					})
-					.catch(err =&gt; {
-						console.error(&quot;Join failed:&quot;, err);
-						UI.alert(&quot;Couldn’t join the room. Please try again.&quot;);
-					});
-				&lt;&lt;/script&gt;&gt;
-			&lt;&lt;else&gt;&gt;
-				&lt;&lt;script&gt;&gt;
-				UI.alert(&quot;Please enter a room nickname before joining a room!&quot;);
-				&lt;&lt;/script&gt;&gt;
-			&lt;&lt;/if&gt;&gt;
-		&lt;&lt;/button&gt;&gt;
-	&lt;&lt;/capture&gt;&gt;
-&lt;&lt;/for&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="LoadRoomLobby" tags="" position="600,100" size="100,100">Loading lobby...
+&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="LoadRoomLobby" tags="" position="600,100" size="100,100">Loading lobby...
 &lt;&lt;script&gt;&gt;
     loadRooms(undefined, State.variables.connectedRoomId)
         .then(room =&gt; {
@@ -348,7 +452,7 @@ Joined players:
     loadRooms(&quot;waiting&quot;, undefined).then(rooms =&gt; {
         State.variables.availableRooms = rooms;
         console.log(rooms);
-        Engine.play(&quot;SelectRoom&quot;)
+        Engine.play(&quot;JoinRoom&quot;)
     });
 &lt;&lt;/script&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
