--- a/join-room.html
+++ b/join-room.html
@@ -87,6 +87,7 @@
                         localStorage.setItem('connectedUserId', userId);
                         localStorage.setItem('connectedRoomName', roomName);
                         localStorage.setItem('connectedUsername', username);
+                        localStorage.setItem('readyStatus', '0');
 
                         // Redirect to room lobby
                         window.location.href = 'load-room-lobby.html';
