--- a/load-room-lobby.html
+++ b/load-room-lobby.html
@@ -13,35 +13,38 @@
     </div>
 
     <script type="module">
-        import { loadRooms } from './main.js';
+        import { loadRooms } from "./main.js";
 
         // Get room data from localStorage
-        const roomId = localStorage.getItem('connectedRoomId');
-        const userId = localStorage.getItem('connectedUserId');
-        const roomName = localStorage.getItem('connectedRoomName');
-        const username = localStorage.getItem('connectedUsername');
+        const roomId = localStorage.getItem("connectedRoomId");
+        const userId = localStorage.getItem("connectedUserId");
+        const roomName = localStorage.getItem("connectedRoomName");
+        const username = localStorage.getItem("connectedUsername");
 
         // Check if we have all required data
         if (!roomId || !userId || !roomName || !username) {
-            console.error('Missing required data:', { roomId, userId, roomName, username });
-            window.location.href = 'index.html';
-            throw new Error('Missing required data');
+            console.error("Missing required data:", { roomId, userId, roomName, username });
+            window.location.href = "index.html";
+            throw new Error("Missing required data");
         }
 
-        // Load room data
-        try {
-            const roomData = await loadRooms(null, roomId);
-            if (roomData) {
-                localStorage.setItem('roomData', JSON.stringify(roomData));
-                window.location.href = 'room-lobby.html';
-            } else {
-                throw new Error('Failed to load room data');
-            }
-        } catch (error) {
-            console.error('Error loading room data:', error);
-            alert('Failed to load room data. Please try again.');
-            window.location.href = 'index.html';
-        }
+        // Get room data
+        loadRooms(undefined, roomId)
+            .then(roomData => {
+                if (!roomData) {
+                    throw new Error("Room not found");
+                }
+
+                // Store room data
+                localStorage.setItem("roomData", JSON.stringify(roomData));
+
+                // Redirect to room lobby
+                window.location.href = "room-lobby.html";
+            })
+            .catch(error => {
+                console.error("Error loading room:", error);
+                window.location.href = "index.html";
+            });
     </script>
 </body>
 </html> 
