Have cleaned up code to better suit production envs, working on role selection

--- a/load-room-lobby.html
+++ b/load-room-lobby.html
@@ -29,21 +29,16 @@
         }
 
         // Get room data (need to load again as data in local storage may not be up to date when user clicks join)
-        loadRooms(undefined, roomId)
-            .then(roomData => {
-                if (!roomData) {
-                    throw new Error("Room not found");
-                }
-
-                localStorage.setItem("roomData", JSON.stringify(roomData));
-
-                // Redirect to room lobby
-                window.location.href = "room-lobby.html";
-            })
-            .catch(error => {
-                console.error("Error loading room:", error);
-                window.location.href = "index.html";
-            });
+        try {
+            const roomData = await loadRooms(undefined, roomId);
+            localStorage.setItem("roomData", JSON.stringify(roomData));
+            // Redirect to room lobby
+            window.location.href = "room-lobby.html";
+        }
+        catch (error) {
+            console.error("Error loading room:", error);
+            window.location.href = "index.html";
+        }
     </script>
 </body>
 </html> 
