--- a/create-room.html
+++ b/create-room.html
@@ -23,9 +23,12 @@
             <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
+    <div id="loadingContainer" class="loading-container" style="display: none;">
+        <div class="loading-spinner"></div>
+    </div>
 
     <script type="module">
-        import { createRoom, createUser, addUserToRoom } from "./main.js";
+        import { createRoom, createUser, addUserToRoom, loadRooms } from "./main.js";
 
         document.getElementById("createRoomForm").addEventListener("submit", async function(e) {
             e.preventDefault();
@@ -41,6 +44,7 @@
             }
 
             try {
+                document.getElementById("loadingContainer").style.display = "flex";
                 // Create room
                 const roomId = await createRoom(roomName);
                 
@@ -57,8 +61,15 @@
                 localStorage.setItem("connectedUsername", userName);
                 localStorage.setItem("readyStatus", "0");
 
-                // Redirect to room lobby
-                window.location.href = "load-room-lobby.html";
+                // Load latest room data and redirect to room lobby
+                try {
+                    const roomData = await loadRooms(undefined, roomId);
+                    localStorage.setItem("localRoomData", JSON.stringify(roomData));
+                    window.location.href = "room-lobby.html";
+                } catch (err) {
+                    errorMessage.textContent = "Error loading room: " + err.message;
+                    errorMessage.style.display = "block";
+                }
             } catch (err) {
                 errorMessage.textContent = "Error: " + err.message;
                 errorMessage.style.display = "block";
